# KAOS

./: .gitmodules  CMakeLists.txt  main.c
include/: util.h
src/: Skylander.c  SkylanderCrypt.c  usb_descriptors.c  util.c
